fix: exposed api key and CORS config

--- a/backendSuchus/.env.example
+++ b/backendSuchus/.env.example
@@ -1,13 +1,19 @@
-# Configuración de Cloudflare R2
+# Django Settings
+DEBUG=False
+SECRET_KEY=your-super-secret-key-here
+ALLOWED_HOSTS=localhost,127.0.0.1
+
+# Cloudflare R2 Storage
 CLOUDFLARE_ACCOUNT_ID=tu-account-id
-CLOUDFLARE_ACCESS_KEY=tu-access-key  
+CLOUDFLARE_ACCESS_KEY=tu-access-key
 CLOUDFLARE_SECRET_KEY=tu-secret-key
 CLOUDFLARE_BUCKET_NAME=suchus-impresiones
-CLOUDFLARE_PUB_ID=your-pub-id
+CLOUDFLARE_PUB_ID=tu-pub-id
 
-# Para obtener estas credenciales:
-# 1. Ve a Cloudflare Dashboard > R2
-# 2. Crea un bucket llamado "suchus-impresiones"
-# 3. Ve a "Manage R2 API Tokens" y crea un token con permisos de lectura/escritura
-# 4. Copia el Account ID, Access Key y Secret Key
-# 5. En la configuración del bucket, habilita acceso público y copia el Public URL ID
+# Cloudinary (Optional - if using cloudinary instead of R2)
+CLOUDINARY_CLOUD_NAME=tu-cloud-name
+CLOUDINARY_API_KEY=tu-api-key
+CLOUDINARY_API_SECRET=tu-api-secret
+
+# CORS
+CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
