--- a/frontend-suchus/package.json
+++ b/frontend-suchus/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "antd": "^5.27.3",
+    "axios": "^1.13.2",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
