--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "n8n": "^2.6.3",
     "react-icons": "^5.5.0"
   }
