--- a/frontend-suchus/package.json
+++ b/frontend-suchus/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "antd": "^5.27.3",
     "axios": "^1.13.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
