--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "n8n": "^2.6.3",
+    "pdfjs-dist": "^5.4.624",
     "react-icons": "^5.5.0"
   }
 }
