--- a/frontend-suchus/package.json
+++ b/frontend-suchus/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.2",
+    "dayjs": "^1.11.10",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "antd": "^5.27.3",
