--- a/frontend-suchus/package.json
+++ b/frontend-suchus/package.json
@@ -11,18 +11,19 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.2",
-    "dayjs": "^1.11.10",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "antd": "^5.27.3",
     "axios": "^1.13.2",
+    "dayjs": "^1.11.10",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
-    "tailwindcss": "^4.1.14"
+    "tailwindcss": "^4.1.14",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
