--- a/backendSuchus/procfile
+++ b/backendSuchus/procfile
@@ -1,2 +1,2 @@
-web: gunicorn backendSuchus.wsgi
+web: gunicorn backendSuchus.wsgi:application --bind 0.0.0.0:$PORT
 worker: python manage.py qcluster
